...
            android:layout_height="wrap_content"
            android:text="رمز خود را فراموش کرده اید؟"
            android:padding="8dp"
            android:textColor="?attr/colorPrimary"/>

    <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPasswordLock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="20"
            android:imeOptions="actionDone"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnUnlock"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="باز کردن"
        app:layout_constraintTop_toBottomOf="@id/tilPasswordLock"
        app:layout_constraintStart_toStartOf="parent"
...
