...

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSaveShopInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/save"/>
</LinearLayout>
